# Meta-s-LedgerShield

./: .README.md.swp  .dockerignore  .gitignore  .inference.py.swp  CHANGELOG.md  Dockerfile  HACKATHON_NOVELTY_POINTS.md  LEDGERSHIELD_EXHAUSTIVE_TECHNICAL_DEEP_DIVE_UPDATED.md  MASTER_README.md  MISSING_SECTIONS_ANALYSIS.md  README.md  __init__.py  agent_comparison_results.json  benchmark_report.py  branch_comparison.json  client.py  compare_all_models.py  compare_models_live.py  final_model_comparison.json  final_model_comparison_with_54.json  final_report.md  find_codec.py  find_crash.py  generate_artifacts.py  generate_branch_comparison_report.py  generate_comparison_report.py  generate_final_report.py  generate_sota_report.py  hgedits_latest_results.json  improvement_analysis.json  inference.py  inference_improved.py  inference_llm_powered.py  inference_results_gpt4o_mini.json  ledgershield_env.py  live_model_comparison.json  llm_judge_grader.py  llm_powered_comparison.json  llm_utils.py  main_vs_hgedits_comparison.json  (+15 more)
artifacts/: benchmark_report_latest.json  leaderboard.json  training_output.json
docs/: A3_CASE_AUDIT_REPORT.md  A4_PORTFOLIO_TRACK_REPORT.md  A7_DEMO_ASSET_PACKAGE.md  A8_PUBLISHING_GUIDE.md  DOCUMENTATION.md  EVIDENCE_MATRIX.md  HF_MINIBLOG_FINAL.md  JUDGE_QUICKSTART.md  P0-0_VERIFICATION_REPORT.md  P0-1_VERIFICATION_REPORT.md  P0-2_VERIFICATION_REPORT.md  README.md  (+28 more)
envs/ledgershield_env/: .dockerignore  Dockerfile  README.md  __init__.py  models.py  pyproject.toml
envs/ledgershield_env/server/: Dockerfile  __init__.py  app.py  environment.py  grading.py  requirements.txt  schema.py  tools.py
envs/ledgershield_env/server/fixtures/: cases.json  email_threads.json  ledger_index.json  po_records.json  vendors.json
(+299 files in other folders)
