[project]
name = "ledgershield"
version = "0.1.0"
description = "LedgerShield OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "pyyaml",
  "httpx",
  "huggingface_hub",
  "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
