[project]
name = "ledgershield"
version = "0.1.0"
description = "LedgerShield OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "pyyaml",
  "httpx",
  "huggingface_hub",
  "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "tests: run the LedgerShield test suite",
]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
  "ignore::DeprecationWarning:websockets\\.legacy",
]
