[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgershield-env"
version = "0.2.0"
description = "LedgerShield payment integrity OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
